fix spacing on desktop site

--- a/css/main.scss
+++ b/css/main.scss
@@ -35,23 +35,18 @@ body {
   background: #000020;
   vertical-align: middle;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-content: center;
 }
 
 .splash {
-  position: absolute;
   width: 50%;
-  z-index: 2;
   align-items: center;
+  margin: auto;
 
 }
 
-#particles-js {
-  height: 50%;
-  position: absolute;
-  z-index: 1;
-}
 
 a {
   text-decoration: none;
@@ -332,8 +327,8 @@ nav {
 
 .button {
     font-family: Roboto;
-    margin-top: 25%;
-    position: absolute;
+    width: 30%;
+    margin: auto;
     border: none;
     padding: 15px 32px;
     text-align: center;
